# Courses

6.00 - MIT/ps3/: radiationExposure.py
CS 109 - Data Science/: CS109.docx
CS 127 - Cryptography/: Defns.tex
CS 127 - Cryptography/CS127/: Computational Security (1).docx  Document1 (1).docx  macros (1).tex
CS 127 - Cryptography/CS127/Software (1)/lfsr-generator-1.0.2/: Makefile.in  NEWS  README.ja  configure.ac
CS 127 - Cryptography/CS127/Software (1)/lfsr-generator-1.0.2/build-aux/: Makefile  Makefile.am  config.h  config.h.in
CS 127 - Cryptography/CS127/Software (1)/lfsr-generator-1.0.2/src/: fibonacci-multishift-test.in  lfsr-generator.in  prng-sample-c  shift_lfsr_c.c  test-engine.in
CS 127 - Cryptography/CS127/Software (1)/lfsr-generator-1.0.2/src/.deps/: prng_sample_c.Po  prng_sample_cplusplus.Po  shift_lfsr_c.Po
CS 127 - Cryptography/Equations/: 1.1 Probability Space.eps  1.3 Expectation of Random Variables.eps  1.5 Chernoff Bound.eps  3.10.eps  3.12.eps  Eqn2.eps  Event.eps  Ex4.eps  Example4.eps  Example5.eps  q.eps  (+1 more)
CS 127 - Cryptography/Software/lfsr-generator-1.0.2/src/: Makefile  Makefile.am  Makefile.in  fibonacci-multishift-test  fibonacci-singleshift-test  fibonacci-singleshift-test.in  galois-test  galois-test.in  lfsr-generator  prng-sample-cplusplus  prng_sample_c.c  prng_sample_cplusplus.cc  shift_lfsr_c.h  shift_lfsr_cplusplus.h  shift_lfsr_test.c  test-engine
CS 153 - Compilers/: regexp.ml  thawk.vb
CS 51 - Abstraction and Design/: 02-18-actual (1).ml  expression.ml (1).txt  queue.ml  rsa.ml  rsa2.ml  setup51.sh
E-3/: Assignment 12 Excel.doc
E10/: 3-12-14-lecture.docx  Exponential Functions.docx  HW 04  Due 03.docx  HW 05.doc  HW 05.docx  HW 06.docx  Hw 02 Due 02.docx  Hw 03.doc  Hw 03_new.docx  Hw 08 Due 04.docx  Lecture Notes.docx  Lesson 3.2.ppt  Lesson 3.3.ppt  Lesson 3.docx  Lesson6.6.docx  Lesson6.7.docx  Page 92.docx  Pset 7.docx  Pset1.docx  Pset10.docx  Pset12.docx  Pset6.docx  Pset9.docx  Review for Test 01.doc  Review for Test 02.doc  The number e.docx  lecture.nb  pset8.docx  sinplot.nb  sinusodial function eq 7-3.nb
EXPO-25/: 1.2 Draft.docx  Analysis on the Judgement of the Birds (1).docx  Analysis on the Judgement of the Birds.docx  Axe in Hand.docx  Blank Sheet.docx  ChartingoutsideexperienceUniversalThemesMatrix.docx  Draft-Saturday.docx  Draft-Sunday.docx  Draft-Unfuckd.docx  E-25 writing.Pre-draft 1.2.docx  E-25.essay1.assignment.docx  Essay 2 - NEW.docx  I argue that Leopold’s encounter with a.docx  In this day of age of pupils conceive social media as a necessitous to everyday human life.docx  Letter.docx  The Beast in the Woods-2.docx  The Lord giveth.docx  The Trumpeter Swan.docx  Tom.essay1.1_edited.docx  axe in hand.rtf  axeinhandtranscript.docx  workshop Essay 1.docx
High School/: 6.2 Iraq War Speeches.gdoc  6.3 Steve Jobs Speech.gdoc  7.1 Research Scavenger Hunt.gdoc  7.2 Research Mind Map.gdoc  7.3 Outline.gdoc  8.2.doc  8.3.doc  8.4.doc  9.1.doc  9.2.doc  9.3.doc  9.4.doc  Assignment 4.1.doc  Bass Clef Ledger Line WKST.doc  Bass Clef Worksheet.doc  ElectronFillingDiagram (1)  English II Test Out.doc  Essay outline LAII.docx  GallimoreN-Covalent+Bond+Lab+Y11SM1.doc  GallimoreN-DensityLabwk2.doc  GallimoreN-IsotopePractice.doc  GallimoreN-IsotopePracticeWk3.doc  GallimoreN-Naming+Covalent_Compounds_Practice_Worksheet.doc  GallimoreN-NuclearDecaySEwk4.doc  GallimoreN-Part2ElectronConfigurationSE.doc  GallimoreN-Week1WritingAssignment.doc  GallimoreNElectronConfigurationLabYR11SM1.doc  GallimoreNIonic Bond Lab.doc  Good things from bad things.gdoc  Interest Inventory.doc  Music Math WKST 1.doc  Music Math WKST 2.doc  Quiz Corrections.txt  Sharps and Flats Note Identification[1].doc  Treble Clef Ledger Line WKST.doc  Treble Clef Worksheet.doc  Virtual Worlds.docx  Vocab.docx  Week 11 Vocabulary.doc  Week 12 Assignment.docx  (+9 more)
Stanford - CS 255 - Cryptography/: Bitwise.java  xor.txt
Stat 110 - Discrete Probability/: Lotus.eps  Negative Binomial.eps  Variance.eps
(+603 files in other folders)
